--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -49,7 +49,7 @@
 %\include{introduction}
 %\include{rbffd_method}
 %\include{ordering_and_preconditioning}
-%\include{gpu_solver}
+\include{gpu_solver}
 \include{distributed_solver}
 %
 %\include{explicit_pde_solutions}
